[gd_scene load_steps=15 format=3 uid="uid://brpa86j2dntq6"]

[ext_resource type="Script" path="res://powerup/powerup.gd" id="1_th6dh"]
[ext_resource type="Texture2D" uid="uid://cwgcresvuljmm" path="res://assets/pow/pow-frame-1.png" id="2_h71rm"]
[ext_resource type="Texture2D" uid="uid://beybo3v606eki" path="res://assets/pow/pow-frame-2.png" id="3_nurcj"]
[ext_resource type="Texture2D" uid="uid://dhsct04ljvree" path="res://assets/pow/pow-frame-3.png" id="4_avlo2"]
[ext_resource type="Texture2D" uid="uid://cd7wvwfj4amqr" path="res://assets/pow/pow-frame-4.png" id="5_v2rg8"]
[ext_resource type="Texture2D" uid="uid://dixvkht80tv5k" path="res://assets/pow/pow-frame-5.png" id="6_v1rf5"]
[ext_resource type="Texture2D" uid="uid://cmd8uh1pwektq" path="res://assets/pow/pow-frame-6.png" id="7_j2klx"]
[ext_resource type="Texture2D" uid="uid://l1ign50sk1sg" path="res://assets/pow/pow-frame-7.png" id="8_put5b"]
[ext_resource type="Texture2D" uid="uid://cwssonrkrkewt" path="res://assets/pow/pow-frame-8.png" id="9_mh8gf"]
[ext_resource type="Texture2D" uid="uid://cbapjie0oggcm" path="res://assets/pow/pow-frame-9.png" id="10_xjxef"]
[ext_resource type="Texture2D" uid="uid://tllntrji4dv7" path="res://assets/pow/pow-frame-10.png" id="11_fxige"]
[ext_resource type="AudioStream" uid="uid://rssbn02e06be" path="res://assets/audio/Coin.wav" id="13_ycu1p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gtmr4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h71rm")
}, {
"duration": 1.0,
"texture": ExtResource("3_nurcj")
}, {
"duration": 1.0,
"texture": ExtResource("4_avlo2")
}, {
"duration": 1.0,
"texture": ExtResource("5_v2rg8")
}, {
"duration": 1.0,
"texture": ExtResource("6_v1rf5")
}, {
"duration": 1.0,
"texture": ExtResource("7_j2klx")
}, {
"duration": 1.0,
"texture": ExtResource("8_put5b")
}, {
"duration": 1.0,
"texture": ExtResource("9_mh8gf")
}, {
"duration": 1.0,
"texture": ExtResource("10_xjxef")
}, {
"duration": 1.0,
"texture": ExtResource("11_fxige")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vl6i"]
size = Vector2(55, 54)

[node name="powerup" type="Area2D" groups=["powerups"]]
script = ExtResource("1_th6dh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gtmr4")
frame_progress = 0.318406

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1vl6i")
one_way_collision_margin = 0.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ycu1p")

[node name="InicioTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_inicio_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
